durga@48demo.com.bleadtest/src/objects/Booth_Qrcode__c.object
<CustomObject>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booth</label>
        <referenceTo>Booth__c</referenceTo>
        <relationshipLabel>Booth Qrcodes</relationshipLabel>
        <relationshipName>Booth_Qrcodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Types__c</fullName>
        <label>Data Types</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Broacher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event</relationshipLabel>
        <relationshipName>Booth_Qrcodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_LabelName__c</fullName>
        <label>Link LabelName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POBox__c</fullName>
        <label>POBox</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pin_code__c</fullName>
        <label>Pin code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Link__c</fullName>
        <label>Registration Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>230</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSelected</label>
        <type>Checkbox</type>
    </fields>
    <label>Booth Qrcode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data_Types__c</columns>
        <columns>Link_LabelName__c</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BQ-{0000}</displayFormat>
        <label>Booth Qrcode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth Qrcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>